# braysite

./: .gitignore  .travis.yml  README.md  full-results.inc  fulllist.inc  functions-SAMPLE.inc  juniors.inc  manage.py  news.inc  pyproject.toml  requirements.txt  shop.inc  supporters.inc  tables.inc  template.html
.github/workflows/: run_tests_python.yml
admin/: addnews.php  addopponent.php  addplayer.php  addreport.php  admingames.php  deletearticle.php  delnews.php  functions.inc  index.html  listarticles.php  news-admin.php
articles/: models.py  tests.py
braysite/: asgi.py  settings.py  urls.py  wsgi.py
match/: models.py  tests.py
news/: admin.py  models.py  tests.py
php-files/: articles.inc  club.inc  contactus.inc  fixtures-full.inc  fixtures.inc  index.inc  ladies.inc  links.inc  mkphpfiles  news-article.inc  reports.inc  results-old.inc  results.inc  settings-SAMPLE.inc  showarticle.inc  site_schema.sql  siteinfo.inc  squad.inc  under21s.inc  worldcup.inc
php-files/admin/: addarticle.php  addcompetition.php  addfixture.php  addotherfixture.php  editreport.php  player.php
player/: admin.py  models.py  tests.py
shared/: admin.py  models.py  tests.py
static/css/: braysite.css
templates/: base.html  home.html
