[tool.poetry]
name = "braysite"
version = "0.1.0"
description = ""
authors = ["Thomas Bridge <thomas.bridge@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.3"
python-dotenv = "^0.20.0"
regex = "^2022.7.9"

[tool.poetry.dev-dependencies]
pylint-django = "^2.5.3"
flake8-django = "^1.1.2"
black = "^22.6.0"
coverage = "^6.4.2"
pydocstring = "^0.2.1"
django-webtest = "^1.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

